# ysdnotebooks

./: .editorconfig  .tool-versions  pyproject.toml
notebooks/: convert-pdf-to-docx.ipynb  docx_tools.ipynb
templates/tb-create-entity-template/: CompanyName-ysdmod.docx
templates/test-template/: CompanyName.docx
