[tool.poetry]
name = "ysdnotebooks"
version = "0.1.0"
description = "This is my collection of jupyter notebooks"
authors = ["Ying Shaodong <helloysd@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
python-dotenv = "^1.0.1"
python-docx = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^8.2.2"
ipython = "^8.26.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
